--- a/index.css
+++ b/index.css
@@ -1,281 +1,18 @@
-/* Basic CSS reset */
-*{
-    border: 0;
+* {
     box-sizing: border-box;
     margin: 0;
-}
-
-/* CSS variables */
-:root {
-    --bg_dark: hsla(0, 0%, 0%, 1);
-    --bg_light: hsla(0, 0%, 100%, 1);
-    --border: hsla(0, 0%, 85%, 1);
-    --border_light: hsla(0, 0%, 100%, 1);
-    --btn_primary_color: hsla(209, 100%, 50%, 1);
-    --btn_primary_shadow: hsla(209, 100%, 50%, 0.25);
-    --link_selected: hsla(209, 100%, 50%, 1);
-    --nav_link_hover_dark: hsla(0, 0%, 96%, 0.25);
-    --nav_link_hover_light: hsla(0, 0%, 96%, 1);
-    --shadow: hsla(0, 0%, 0%, 0.25);
-    --shadow1: hsla(0, 0%, 0%, 0.50);
-    --shadow2: hsla(0, 0%, 0%, 0.75);
-    --text_primary_dark: hsl(0, 0%, 100%, 1);
-    --text_primary_light: hsla(0, 0%, 0%, 1);
-    --text_secondary_dark: hsla(0, 0%, 0%, 0.75);
-    --text_secondary_light: hsla(0, 0%, 0%, 0.75);
-}
-
-
-/* Utility classes like */
-.mb12 {
-    margin-bottom: 12rem;
-}
-
-/* Scroll nbehaviour */
-html {
-    scroll-behavior: smooth;
-}
-
-/* General styling for body elements */
-body {
-    font-family: 'IBM Plex Sans', 'Seagoe UI', Tahoma, Arial, sans-serif;
-}
-
-/* Styling the side navigation bar */
-.sidebar {
-    background-color: var(--bg_light); /* Black*/
-    border-right: 0.5px solid var(--border);
-    height: 100%; /* 100% Full-height */
-    left: 0;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 2em; /* Place content 60px from the top */
-    position: fixed; /* Stay in place */
-    top: 0;
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
-    width: 0; /* 0 width - change this with JavaScript */
-    z-index: 1; /* Stay on top */
-}
-
-/* Styling close button of the sidebar */
-.sidebar .close-btn {
-    background-color: none;
-    color: var(--text_primary_light);
-    font-size: 36px;
-    margin-left: 50px;
-    position: absolute;
-    right: 25px;
-    text-decoration: none;
-    top: 0;
-}
-
-/* Nav container styling*/
-.nav-container {
-    padding: 1em;
-}
-
-/* Styling for profile avatar */
-.profile-container {
-    margin-bottom: 1.5rem;
-}
-
-.profile-container .avatar {
-    border-radius: 50%;
-    border: 2px solid var(--border_light);
-    box-shadow: var(--shadow) 0px 4px 4px;
-    height: 64px;
-    width: 64px;
-}
-
-/* Name and description styling */
-.info {
-    margin-bottom: 2.5rem;
-}
-
-.name {
-    display: block;
-    font-size: 1.8rem;
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-    text-shadow: var(--shadow) 0px 2px 8px;
-}
-
-.description {
-    font-size: 1rem;
-    color: var(--bg_dark);
-}
-
-/* Contact navigation links stlying */
-.contact-nav {
-    margin-bottom: 2rem;
-}
-
-.contact-nav .icon {
-    height: 1rem;
-    margin-right: 0.5rem;
-    vertical-align: middle;
-    width: 1rem; 
-}
-
-.contact__ul, li {
-    display: block;
-    list-style-type: none;
-    margin-bottom: 0.5rem;
     padding: 0;
 }
 
-.contact__ul li a {
-    color: var(--bg_dark);
-    font-size: 1rem;
-    text-decoration: none;
-}
-
-.contact__ul li a:hover, a:active {
-    color: var(--link_selected);
-    text-decoration: underline;
-}
-
-/* Styling for links of viewbox */
-.info-nav {
-    margin-bottom: 1.5rem;
-    padding: 0.5em 0em;
-}
-
-.info-link {
-    background-color: var(--bg_light);
-    border-radius: 4px;
-    color: var(--bg_dark);
-    display: block;
-    font-size: small;
-    font-weight: normal;
-    margin: 0.25rem 0rem;
-    padding: 0.75em 1em;
-    text-decoration: none;
-}
-
-.info-link:hover {
-    background-color: var(--nav_link_hover_light);
-    text-decoration: none;
-}
-
-.info-link:active {
-    background-color: var(--nav_link_hover_light);
-    border-left: 4px solid var(--link_selected);
-    border-radius: 4px;
-    color: var(--link_selected);
-    text-decoration: none;
-}
-
-/* Styling for slide open button */
-.openbtn {
-    background-color: var(--bg_light);
-    border-radius: 8px;
-    border: none;
-    cursor: pointer;
-    font-size: 1rem;
-    height: 32px;
-    padding: 0em;
-    width: 32px;
-}
-
-/* Styling for main */
-#main {
-  padding: 20px;
-  transition: margin-left .5s;
-}
-
-/* Font styling for viewbox */
-.viewbox {
-  border-radius: 1rem;
-  border: 1px solid var(--border);
-  font-size: 2rem;
-  font-weight: bold;
-  margin: 1rem;
-  min-height: 100vh;
-  overflow-y: hidden;
-  padding: 1em;
-}
-
-.viewbox .cmd-like {
-    color: var(--shadow1);
+body {
+    background-color: black;
+    color: rgb(196, 196, 196);
+    font-family: 'Courier New', Courier, monospace;
+    padding: 4px;
     font-weight: bold;
 }
 
-.viewbox p {
-    color: var(--shadow2);
-    font-size: 1.2rem;
-    font-weight: 400;
-}
 
-
-.experience {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.card {
-  border-radius: 8px;
-  border: 1px solid var(--shadow);
-  box-shadow: 2px 2px 8px hsl(0, 0%, 0%, 0.25);
-  margin: 1rem 1rem 1rem 0rem;
-  padding: 0.5em;
-  width: 300px;
-}
-
-.btn {
-  background-color: #091e31;
-  border-radius: 4px;
-  border: 0;
-  color: white;
-  font-family: inherit;
-  font-size: small;
-  font-weight: 600;
-  padding: 0.5em 1em;
-}
-
-.btn:hover {
-  background-color: #2f3235;
-}
-
-
-.disabled {
-  background-color: rgb(214, 214, 214);
-}
-
-.disabled:hover {
-  background-color: rgb(214, 214, 214);
-}
-
-/* Mdia Queries */
-
-@media screen and (max-height: 450px) {
-    .sidebar {padding-top: 15px;}
-    .sidebar a {font-size: 18px;}
-}
-
-@media screen and (min-width: 768px) {
-    .sidebar {
-      width: 254.938px;
-    }
-
-    body {
-      margin-left: 254.938px;
-    }
-
-    .close-btn {
-      display: none;
-    }
-
-    .openbtn {
-      display: none;
-    }
-
-    
-}
-
-
-@media screen and (max-width: 768px) {
-  .experience {
-    flex-flow: column;
-  }
+a, a:hover() {
+    color: yellow;
 }
